--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.9.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
